--- a/fHDHR_web/templates/version.html
+++ b/fHDHR_web/templates/version.html
@@ -4,17 +4,19 @@
 
     <h4 style="text-align: center;">fHDHR Version Information</h4>
 
-      <table class="center" style="width:50%">
-        <tr>
-          <th></th>
-          <th></th>
-        </tr>
 
-      {% for key in list(version_dict.keys()) %}
-        <tr>
-          <td>{{ key }}</td>
-          <td>{{ version_dict[key] }}</td>
-        </tr>
-      {% endfor %}
+    <div class="container">
+      <table class="table-medium center">
+        <tbody>
+
+          {% for key in list(version_dict.keys()) %}
+            <tr>
+              <td>{{ key }}</td>
+              <td>{{ version_dict[key] }}</td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
 
 {% endblock %}
