--- a/fHDHR_web/templates/channels.html
+++ b/fHDHR_web/templates/channels.html
@@ -9,66 +9,75 @@
     </div>
     <br>
 
-    <table class="center" style="width:50%">
-      <tr>
-        <th></th>
-        <th></th>
-      </tr>
+    <div class="container">
+      <table class="table-small center">
+        <tbody>
+          {% for key in list(channels_dict.keys()) %}
+            <tr>
+              <td>{{ key }}</td>
+              <td>{{ channels_dict[key] }}</td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
 
-    {% for key in list(channels_dict.keys()) %}
-      <tr>
-        <td>{{ key }}</td>
-        <td>{{ channels_dict[key] }}</td>
-      </tr>
-    {% endfor %}
-
+    <br>
     <div style="text-align: center;">
       <button onclick="OpenLink('/channels_editor')">Edit Channels</a></button>
     </div>
     <br>
 
-    <table class="center" style="width:100%">
-      <tr>
-        <th>Play</th>
-        <th>Channel Name</th>
-        <th>Channel CallSign</th>
-        <th>Channel Number</th>
-        <th>Channel Thumbnail</th>
-        <th>Enabled</th>
-        <th>Favorite</th>
-      </tr>
+    <div class="container">
+      <table class="table-scroll small-first-col">
+        <thead>
+          <tr>
+            <th>Play</div>
+            <th>Channel Name</th>
+            <th>Channel CallSign</th>
+            <th>Channel Number</th>
+            <th>Channel Thumbnail</th>
+            <th>Enabled</th>
+            <th>Favorite</th>
+          </tr>
+        </thead>
 
-    {% for chan_dict in channelslist %}
-      <tr>
-        <td>
-          {% if chan_dict["enabled"] %}
-            <a href="{{ chan_dict["play_url"] }}">Play</a>
-          {% endif %}
+        <tbody class="body-half-screen">
+          {% for chan_dict in channelslist %}
+            <tr>
 
-        </td>
+              <td>
+                {% if chan_dict["enabled"] %}
+                  <a href="{{ chan_dict["play_url"] }}">Play</a>
+    	          {% else %}
+    	            <a href="{{ chan_dict["play_url"] }}" style="visibility:hidden">Play</a>
+                {% endif %}
+              </td>
 
-        <td>{{ chan_dict["name"] }}</td>
-        <td>{{ chan_dict["callsign"] }}</td>
-        <td>{{ chan_dict["number"] }}</td>
+              <td>{{ chan_dict["name"] }}</td>
+              <td>{{ chan_dict["callsign"] }}</td>
+              <td>{{ chan_dict["number"] }}</td>
 
-        {% if chan_dict["thumbnail"]  %}
-          <td><img src="{{ chan_dict["thumbnail"] }}" alt="{{ chan_dict["name"] }}" width="100" height="100"></td>
-        {% else %}
-          <td>No Image Available</td>
-        {% endif %}
+              {% if chan_dict["thumbnail"]  %}
+                <td><img src="{{ chan_dict["thumbnail"] }}" alt="{{ chan_dict["name"] }}" width="100" height="100"></td>
+              {% else %}
+                <td>No Image Available</td>
+              {% endif %}
 
-        {% if chan_dict["enabled"]  %}
-          <td>Enabled</td>
-        {% else %}
-          <td>Disabled</td>
-        {% endif %}
+              {% if chan_dict["enabled"]  %}
+                <td>Enabled</td>
+              {% else %}
+                <td>Disabled</td>
+              {% endif %}
 
-        {% if chan_dict["favorite"]  %}
-          <td>Yes</td>
-        {% else %}
-          <td>No</td>
-        {% endif %}
-
-    {% endfor %}
-
+              {% if chan_dict["favorite"]  %}
+                <td>Yes</td>
+              {% else %}
+                <td>No</td>
+              {% endif %}
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
 {% endblock %}
