--- a/fHDHR_web/templates/settings.html
+++ b/fHDHR_web/templates/settings.html
@@ -14,46 +14,55 @@
         <h4 style="text-align: center;">{{ config_section }}</h4>
       {% endif %}
 
-      <table class="center" style="width:100%">
+    <div class="container">
+      <table class="table-settings center action-col text-edit-cols">
+        <thead>
           <tr>
-              <th>Config Name</th>
-              <th>Config Default Value</th>
-              <th>Config Value</th>
-              <th>Update</th>
-              <th>Reset</th>
+            <th>Config Name</th>
+            <th>Config Default Value</th>
+            <th>Config Value</th>
+            <th>Action</th>
           </tr>
+        </thead>
+        <tbody>
 
-      {% for config_item in list(web_settings_dict[config_section].keys()) %}
+          {% for config_item in list(web_settings_dict[config_section].keys()) %}
 
-      <tr>
-        <td data-th="Config Name">{{ config_item }}</td>
+            <tr>
+              <td>{{ config_item }}</td>
 
-        <td data-th="Config Default Value">{{ web_settings_dict[config_section][config_item]["value_default"] }}</td>
+              <td>{{ web_settings_dict[config_section][config_item]["value_default"] }}</td>
 
-        <form method="post" action="/api/settings?method=update&redirect=%2Fsettings">
-          <input type="hidden" name="config_section" value="{{ config_section }}">
-          <input type="hidden" name="config_name" value="{{ config_item }}">
-          <input type="hidden" name="config_default" value="{{ web_settings_dict[config_section][config_item]["value_default"] }}">
-            {% if web_settings_dict[config_section][config_item]["hide"] %}
-              <td data-th="Config Value"><input type="text" size="50" name="config_value" value=**************></td>
-            {% else %}
-              <td data-th="Config Value"><input type="text" size="50" name="config_value" value="{{ web_settings_dict[config_section][config_item]["value"] }}"></td>
-            {% endif %}
-            <td data-th="Update"><input type="submit" value="Update"></td>
-        </form>
+	            <td>
+                <form method="post" action="/api/settings?method=update&redirect=%2Fsettings">
+                  <input type="hidden" name="config_section" value="{{ config_section }}">
+                  <input type="hidden" name="config_name" value="{{ config_item }}">
+                  <input type="hidden" name="config_default" value="{{ web_settings_dict[config_section][config_item]["value_default"] }}">
+                  {% if web_settings_dict[config_section][config_item]["hide"] %}
+                    <input type="text" size="25" name="config_value" value="**************">
+                  {% else %}
+                    <input type="text" size="25" name="config_value" value="{{ web_settings_dict[config_section][config_item]["value"] }}">
+                  {% endif %}
+  	              <span style="margin:auto">
+  		              <input type="submit" value="Update">
+  	              </span>
+                </form>
+              </td>
 
-        <form method="post" action="/api/settings?method=update&redirect=%2Fsettings">
-          <input type="hidden" name="config_section" value="{{ config_section }}">
-          <input type="hidden" name="config_name" value="{{ config_item }}">
-          <input type="hidden" name="config_value" value="{{ web_settings_dict[config_section][config_item]["value_default"] }}">
-          <input type="hidden" name="config_default" value="{{ web_settings_dict[config_section][config_item]["value_default"] }}">
-            <td data-th="Reset"><input type="submit" value="Reset"></td>
-        </form>
+              <td style="display:flex;">
+	                <form style="margin:auto">
+  	                <input type="hidden" name="config_section" value="{{ config_section }}">
+                    <input type="hidden" name="config_name" value="{{ config_item }}">
+                    <input type="hidden" name="config_value" value="{{ web_settings_dict[config_section][config_item]["value_default"] }}">
+                    <input type="hidden" name="config_default" value="{{ web_settings_dict[config_section][config_item]["value_default"] }}">
+	                  <input type="submit" value="Reset">
+                  </form>
+              </td>
 
-      </tr>
+    </tr>
 
       {% endfor %}
-      </table>
+      </div>
 
     {% endfor %}
 
