--- a/fHDHR_web/templates/settings.html
+++ b/fHDHR_web/templates/settings.html
@@ -7,7 +7,7 @@
     <h4 style="text-align: center;">Some Settings will require a manual restart.</h4>
 
     <div style="text-align: center;">
-      <button onclick="OpenLink('/api/settings?method=restart&instance_id={{ session["instance_id"] }}&redirect=%2Fsettings')">Restart fHDHR</a></button><p> Note: This may take some time.</p>
+      <button onclick="OpenLink('/api/settings?method=restart&instance_id={{ session["instance_id"] }}&redirect=%2Fsettings')">Restart fHDHR</a></button><p> Note: This may take some time, and you will have to refresh your page.</p>
     </div>
     <br>
 
