--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -21,8 +21,8 @@
       <button class="pull-left" onclick="OpenLink('/origin')">{{ fhdhr.config.dict["main"]["servicename"] }}</a></button>\
 
       {% for page_dict in session["route_list"]["pages"] %}
-        {% if page_dict["name"] != "page_index_html" %}
-          <button class="pull-left" onclick="OpenLink('{{ page_dict["endpoints"][0] }}')">{{ page_dict["pretty_name"] }}</a></button>
+        {% if session["route_list"]["pages"][page_dict]["name"] != "page_index_html" and fhdhr.config.dict["web_ui"]["access_level"] >= session["route_list"]["pages"][page_dict]["endpoint_access_level"] %}
+          <button class="pull-left" onclick="OpenLink('{{ session["route_list"]["pages"][page_dict]["endpoints"][0] }}')">{{ session["route_list"]["pages"][page_dict]["pretty_name"] }}</a></button>
         {% endif %}
       {% endfor %}
 
