--- a/fHDHR_web/templates/tools.html
+++ b/fHDHR_web/templates/tools.html
@@ -9,4 +9,11 @@
     <a data-th="Convert Json url to tabbbed"><input type="submit" value="Convert Json url to tabbbed"></a>
   </form>
 
+  <br><br><br>
+
+  <form method="post" action="/api/tools?method=css_generator">
+    <input type="text" name="url" value="">
+    <input type="submit" value="Generate CSS">
+  </form>
+
 {% endblock %}
