--- a/fHDHR_web/templates/tools.html
+++ b/fHDHR_web/templates/tools.html
@@ -13,7 +13,7 @@
 
   <form method="post" action="/api/tools?method=css_generator">
     <input type="text" name="url" value="">
-    <input type="submit" value="Generate CSS">
+    <br><input type="submit" value="Generate CSS">
   </form>
 
 {% endblock %}
