--- a/fHDHR_web/templates/tools.html
+++ b/fHDHR_web/templates/tools.html
@@ -16,4 +16,33 @@
     <br><input type="submit" value="Generate CSS">
   </form>
 
+  <div class="container">
+    <table class="table-settings center action-col text-edit-cols">
+    <thead>
+      <tr>
+        <th>CSS Name</th>
+        <th>CSS Type</th>
+        <th>Value</th>
+      </tr>
+    </thead>
+      <tbody>
+
+        {% for css_item in css_items %}
+          <tr>
+            <td>{{ css_item["name"] }}</td>
+            <td>{{ css_item["type"] }}</td>
+            <td>
+              <form style="margin:auto">
+                <input type="hidden" name="section" value="{{ css_item["section"] }}">
+                <input type="hidden" name="section" value="{{ css_item["setting"] }}">
+                <input type="text" size="25" name="value" value="{{ css_item["value"] }}">
+                <br><input type="submit" value="Generate CSS">
+              </form>
+            </td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+
 {% endblock %}
