--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -4,10 +4,14 @@
     <title>{{ fhdhr.config.dict["fhdhr"]["friendlyname"] }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
+    <script type="text/javascript" src="/brython.js"></script>
+    <script type="text/javascript" src="/brython_stdlib.js"></script>
 
   </head>
 
   <body>
+    <body onload="brython({debug: 1, indexedDB: false})">
+
     <h1 class="center" style="text-align:center">
       <span style="text-decoration: underline;"><strong><em>{{ fhdhr.config.dict["fhdhr"]["friendlyname"] }}</em></strong>
       </span>
@@ -15,8 +19,10 @@
     </h1>
     {% set retmessage = request.args.get('retmessage', default=None) %}
     {% if retmessage %}
-      <p></p>
-      <p class="pull-left" style="font-size:1em">{{ retmessage }}</p>
+      <div class="pull-left" >
+        <p class="retmessage" ></p>
+        <p class="retmessage" style="font-size:1em">{{ retmessage }}</p>
+      </div>
     {% endif %}
     <br><br>
     <p></p>
