--- a/fHDHR_web/templates/channels_editor.html
+++ b/fHDHR_web/templates/channels_editor.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
+  <script type="text/javascript" src="/brython.js"></script>
+  <script type="text/javascript" src="/brython_stdlib.js"></script>
   <script type="text/python" id="enable0">
     from browser import document, alert, window, bind
 
