--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -7,7 +7,7 @@
 
   </head>
 
-  <body>
+  <body onload="brython({debug: 1, indexedDB: false})">
     <h1 class="center" style="text-align:center">
       <span style="text-decoration: underline;"><strong><em>{{ fhdhr.config.dict["fhdhr"]["friendlyname"] }}</em></strong>
       </span>
