--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -7,6 +7,7 @@
 
     <script type="text/javascript" src="/brython.js"></script>
     <script type="text/javascript" src="/brython_stdlib.js"></script>
+    <script type="text/python" src="brython.bry"></script>
 
   </head>
 
