--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -26,6 +26,8 @@
     <br><br>
     <p></p>
 
+    <button type="button" id="zone">Menu</button>
+
     <div>
       <button onclick="location.href='/index'" type="button">fHDHR</button>
       <button onclick="location.href='/origin'" type="button">{{ fhdhr.config.dict["main"]["servicename"] }}</button>
