--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -26,7 +26,7 @@
     <br><br>
     <p></p>
 
-    <button type="button" id="zone">Menu</button>
+    <div id="main_menu"></div>
 
     <div>
       <button onclick="location.href='/index'" type="button">fHDHR</button>
