--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -26,7 +26,8 @@
     <br><br>
     <p></p>
 
-    <div id="main_menu" value={{ session }}></div>
+    <div id="main_menu"></div>
+    <input type="hidden" name="session" value={{ session }}>
 
     <div>
       <button onclick="location.href='/index'" type="button">fHDHR</button>
