--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -27,7 +27,7 @@
     <p></p>
 
     <div id="main_menu"></div>
-    <input type="hidden" name="session" value={{ session }}>
+    <input type="hidden" class="session" name="session" value={{ session }}>
 
     <div>
       <button onclick="location.href='/index'" type="button">fHDHR</button>
