--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -28,6 +28,7 @@
 
     <div id="main_menu"></div>
     <input type="hidden" class="session" name="session" value={{ session }}>
+    <input type="hidden" class="fhdhr" name="fhdhr" value={{ fhdhr }}>
 
     <div>
       <button onclick="location.href='/index'" type="button">fHDHR</button>
