--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -28,7 +28,7 @@
 
     <div id="main_menu"></div>
     <input type="hidden" class="session" name="session" value={{ session }}>
-    <input type="hidden" class="fhdhr" name="fhdhr" value={{ fhdhr }}>
+    <input type="hidden" class="servicename" name="servicename" value={{ fhdhr.config.dict["main"]["servicename"] }}>
 
     <div>
       <button onclick="location.href='/index'" type="button">fHDHR</button>
