--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -29,6 +29,7 @@
     <div id="main_menu"></div>
     <input type="hidden" class="session" name="session" value={{ session }}>
     <input type="hidden" class="servicename" name="servicename" value={{ fhdhr.config.dict["main"]["servicename"] }}>
+    <input type="hidden" class="access_level" name="access_level" value={{ fhdhr.config.dict["web_ui"]["access_level"] }}>
 
     <div>
       <button onclick="location.href='/index'" type="button">fHDHR</button>
