--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -27,7 +27,7 @@
     <p></p>
 
     <div id="main_menu"></div>
-    <input type="hidden" class="session" name="session" value={{ session }}>
+    <input type="hidden" class="route_list" name="route_list" value={{ session["route_list"] }}>
     <input type="hidden" class="servicename" name="servicename" value={{ fhdhr.config.dict["main"]["servicename"] }}>
     <input type="hidden" class="access_level" name="access_level" value={{ fhdhr.config.dict["web_ui"]["access_level"] }}>
 
