--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -27,7 +27,7 @@
     <p></p>
 
     <div id="main_menu"></div>
-    <input type="hidden" id="route_list" value={{ session["route_list"] }}>
+    <input type="hidden" id="session" value={{ session }}>
     <input type="hidden" id="servicename" value={{ fhdhr.config.dict["main"]["servicename"] }}>
     <input type="hidden" id="access_level" value={{ fhdhr.config.dict["web_ui"]["access_level"] }}>
 
