--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -26,19 +26,11 @@
     <br><br>
     <p></p>
 
-    <div id="main_menu"></div>
     <input type="hidden" id="servicename" value={{ fhdhr.config.dict["main"]["servicename"] }}>
     <input type="hidden" id="access_level" value={{ fhdhr.config.dict["web_ui"]["access_level"] }}>
 
     <div>
-      <button onclick="location.href='/index'" type="button">fHDHR</button>
-      <button onclick="location.href='/origin'" type="button">{{ fhdhr.config.dict["main"]["servicename"] }}</button>
-
-      {% for page_dict in session["route_list"]["pages"] %}
-        {% if session["route_list"]["pages"][page_dict]["name"] != "page_index_html" and fhdhr.config.dict["web_ui"]["access_level"] >= session["route_list"]["pages"][page_dict]["endpoint_access_level"] %}
-          <button onclick="location.href='{{ session["route_list"]["pages"][page_dict]["endpoints"][0] }}'" type="button">{{ session["route_list"]["pages"][page_dict]["pretty_name"] }}</button>
-        {% endif %}
-      {% endfor %}
+      <a id="main_menu"></a>
 
       <a class="pull-right" style="padding: 5px;" href="/api/xmltv?method=get&source={{ fhdhr.device.epg.def_method }}">xmltv</a>
       <a class="pull-right" style="padding: 5px;" href="/api/m3u?method=get&channel=all">m3u</a>
