--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -30,7 +30,7 @@
     <input type="hidden" id="access_level" value={{ fhdhr.config.dict["web_ui"]["access_level"] }}>
 
     <div>
-      <a id="main_menu"></a>
+      <a style="padding: 5px;" id="main_menu"></a>
 
       <a class="pull-right" style="padding: 5px;" href="/api/xmltv?method=get&source={{ fhdhr.device.epg.def_method }}">xmltv</a>
       <a class="pull-right" style="padding: 5px;" href="/api/m3u?method=get&channel=all">m3u</a>
