--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -27,6 +27,15 @@
     <p></p>
 
     <div>
+      <div class="dropdown">
+        <a href="#">test</a>
+        <button class="dropbtn">Dropdown</button>
+        <div class="dropdown-content">
+          <a href="#">fHDHR</a>
+          <a href="#">{{ fhdhr.config.dict["main"]["servicename"] }}</a>
+        </div>
+      </div>
+
       <button onclick="location.href='/index'" type="button">fHDHR</button>
       <button onclick="location.href='/origin'" type="button">{{ fhdhr.config.dict["main"]["servicename"] }}</button>
 
