--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -28,7 +28,7 @@
 
     <div>
       <div class="dropdown">
-        <button class="dropbtn">|||</button>
+        <button class="dropbtn" style="background-image:url('/favicon.ico')"></button>
         <div class="dropdown-content">
           <button onclick="location.href='/index'" type="button">fHDHR</button>
           <button onclick="location.href='/origin'" type="button">{{ fhdhr.config.dict["main"]["servicename"] }}</button>
