--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -37,6 +37,7 @@
             {% endif %}
           {% endfor %}
         </div>
+      </div>
 
       <a class="pull-right" style="padding: 5px;" href="/api/xmltv?method=get&source={{ fhdhr.device.epg.def_method }}">xmltv</a>
       <a class="pull-right" style="padding: 5px;" href="/api/m3u?method=get&channel=all">m3u</a>
