--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -36,11 +36,9 @@
           {% endif %}
         {% endfor %}
         <div class="dropdown">
-          <button class="dropbtn">Dropdown<i class="fa fa-caret-down"></i></button>
+          <button class="dropbtn">Channels<i class="fa fa-caret-down" href="/channels"></i></button>
           <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
+            <a href="/channels_editor">Channels Editor</a>
           </div>
         </div>
       </div>
