--- a/fHDHR_web/templates/base.html
+++ b/fHDHR_web/templates/base.html
@@ -36,7 +36,7 @@
           {% endif %}
         {% endfor %}
         <div class="dropdown">
-          <button class="dropbtn">Channels<i class="fa fa-caret-down" href="/channels"></i></button>
+          <button class="dropbtn">Channels<i class="fa fa-caret-down" onclick="location.href='/channels'"></i></button>
           <div class="dropdown-content">
             <a href="/channels_editor">Channels Editor</a>
           </div>
