--- a/fHDHR_web/templates/channels.html
+++ b/fHDHR_web/templates/channels.html
@@ -4,17 +4,17 @@
 
   <h4 style="text-align: center;">{{ fhdhr.config.dict["fhdhr"]["friendlyname"] }} Channels</h4>
 
-  <div style="text-align: center;">
-    <button onclick="location.href='/api/tuners?method=scan&redirect=/channels'" type="button">Force Channel Update</button>
-    <p> Note: This may take some time.</p>
-  </div>
-  <br>
-
   <p>
     {% for origin in origin_methods %}
       <button onclick="location.href='/channels?source={{ origin }}'" type="button">{{ origin }}</button>
     {% endfor %}
   </p>
+
+  <div style="text-align: center;">
+    <button onclick="location.href='/api/tuners?method=scan&redirect=/channels&origin={{ origin }}'" type="button">Force Channel Update</button>
+    <p> Note: This may take some time.</p>
+  </div>
+  <br>
 
   <div class="container">
   <table class="table-small center">
