--- a/fHDHR_web/templates/channels.html
+++ b/fHDHR_web/templates/channels.html
@@ -31,7 +31,7 @@
 
   <br>
   <div style="text-align: center;">
-    <button onclick="location.href='/channels_editor'" type="button">Edit Channels</button>
+    <button onclick="location.href='/channels_editor?origin={{ origin }}'" type="button">Edit Channels</button>
   </div>
   <br>
 
