--- a/fHDHR_web/templates/channels.html
+++ b/fHDHR_web/templates/channels.html
@@ -11,7 +11,7 @@
   </p>
 
   <div style="text-align: center;">
-    <button onclick="location.href='/api/tuners?method=scan&redirect=/channels&origin={{ origin }}'" type="button">Force Channel Update</button>
+    <button onclick="location.href='/api/tuners?method=scan&origin={{ origin }}&redirect=/channels'" type="button">Force Channel Update</button>
     <p> Note: This may take some time.</p>
   </div>
   <br>
